--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ margin: 25px 0px;
 	color: white;
 	display: inline-block;
 	padding: 14px 27px;
-	underline: non;
 	text-decoration: none;
 }
 
@@ -57,7 +56,6 @@ margin: 25px 0px;
 		color: #000;
 		display: block;
 		font-size: 12px;
-		underline: non;
 		text-decoration: none;
 		border: 1px solid grey;
 		padding: 10px 20px;
@@ -102,9 +100,10 @@ img.cont {
 	text-decoration: none;
 }
 
-.footer::after {
-	content: '2014 © All rights reserved';
-	padding: 0px 340px;
+.copy {
+	float: right;
+	display: block;
+	padding: 15px 20px;
 }
 
 .menu_f:hover {
